--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "dependencies": {
     "grunt": "~0.4.5",
-    "grunt-ngmin":"0.0.3"
+    "grunt-contrib-clean":"*",
+    "grunt-angular-templates":"*",
+    "grunt-contrib-concat":"*",
+    "grunt-contrib-uglify":"*",
+    "grunt-contrib-watch":"*"
   }
 }
